--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(CppConcurrencyChapter6)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
-add_executable(CppConcurrencyChapter6 ${SOURCE_FILES} Listing/Listing6_1.cpp Listing/Listing6_2.cpp)
+add_executable(CppConcurrencyChapter6 ${SOURCE_FILES} Listing/Listing6_1.cpp Listing/Listing6_2.cpp Listing/Listing6_3.cpp)
